CompilerProject/entrega/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    dje

Grammar

Rule 0     S' -> funcion
Rule 1     funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo
Rule 2     cuerpo -> LLAVE_IZQ lista_declaraciones LLAVE_DER
Rule 3     declaracion -> tocar
Rule 4     declaracion -> declaracion_si
Rule 5     declaracion -> declaracion_mientras
Rule 6     declaracion -> declaracion_para
Rule 7     declaracion -> dec_variable
Rule 8     declaracion -> modificacion_var
Rule 9     declaracion -> expresion PUNTO_COMA
Rule 10    lista_declaraciones -> lista_declaraciones declaracion
Rule 11    lista_declaraciones -> declaracion
Rule 12    declaracion_si -> SI PAREN_IZQ expresion PAREN_DER cuerpo
Rule 13    declaracion_si -> SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
Rule 14    declaracion_mientras -> MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
Rule 15    declaracion_para -> PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
Rule 16    parametros_para -> dec_asignacion COMA expresion COMA expresion
Rule 17    instrumento -> PIANO
Rule 18    instrumento -> GUITARRA
Rule 19    instrumento -> FLAUTA
Rule 20    numero -> CONSTANTE_ENTERA
Rule 21    numero -> CONSTANTE_FLOTANTE
Rule 22    lista_notas -> lista_notas COMA nota
Rule 23    lista_notas -> nota
Rule 24    nota -> DO
Rule 25    nota -> RE
Rule 26    nota -> MI
Rule 27    nota -> FA
Rule 28    nota -> SOL
Rule 29    nota -> LA
Rule 30    nota -> SI
Rule 31    paren_notas -> PAREN_IZQ lista_notas PAREN_DER
Rule 32    llaves_notas -> LLAVE_IZQ lista_notas LLAVE_DER
Rule 33    elemento -> paren_notas
Rule 34    elemento -> llaves_notas
Rule 35    elemento -> nota
Rule 36    elemento -> ID
Rule 37    tiempo_nota -> numero elemento
Rule 38    tiempo_nota -> numero modificador_nota
Rule 39    elemento_potencia -> tiempo_nota
Rule 40    elemento_potencia -> modificador_nota
Rule 41    elemento_potencia -> elemento
Rule 42    potencia_nota -> elemento_potencia POTENCIA numero
Rule 43    modificador_nota -> MODIFICADOR elemento
Rule 44    tocar -> TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
Rule 45    parametros_tocar -> tempo COMA instrumento sincronizacion
Rule 46    tempo -> CONSTANTE_ENTERA
Rule 47    tempo -> ID
Rule 48    sincronizacion -> COMA CONSTANTE_ENTERA
Rule 49    sincronizacion -> COMA CONSTANTE_FLOTANTE
Rule 50    sincronizacion -> COMA ID
Rule 51    sincronizacion -> vacio
Rule 52    cuerpo_tocar -> LLAVE_IZQ lista_tocar LLAVE_DER
Rule 53    lista_tocar -> lista_tocar COMA elemento_tocar
Rule 54    lista_tocar -> elemento_tocar
Rule 55    elemento_tocar -> tiempo_nota
Rule 56    elemento_tocar -> potencia_nota
Rule 57    elemento_tocar -> modificador_nota
Rule 58    elemento_tocar -> elemento
Rule 59    arreglo -> CORCHETE_IZQ lista_arreglos CORCHETE_DER
Rule 60    indice_arreglo -> ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
Rule 61    lista_arreglos -> lista_arreglos COMA elemento_arreglo
Rule 62    lista_arreglos -> elemento_arreglo
Rule 63    elemento_arreglo -> elemento_tocar
Rule 64    elemento_arreglo -> numero
Rule 65    elemento_arreglo -> BOOLEANO
Rule 66    lista_variables -> expresion
Rule 67    lista_variables -> arreglo
Rule 68    tipo_dato -> ENTERO
Rule 69    tipo_dato -> FLOTANTE
Rule 70    tipo_dato -> BOOL
Rule 71    tipo_dato -> NOTA
Rule 72    tipo_var -> ID
Rule 73    tipo_var -> ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
Rule 74    dec_variable -> dec_asignacion PUNTO_COMA
Rule 75    dec_asignacion -> tipo_dato asignacion
Rule 76    asignacion -> tipo_var ASIGNACION lista_variables
Rule 77    modificacion_var -> asignacion PUNTO_COMA
Rule 78    expresion -> PAREN_IZQ expresion PAREN_DER
Rule 79    expresion -> ID
Rule 80    expresion -> numero
Rule 81    expresion -> BOOLEANO
Rule 82    expresion -> indice_arreglo
Rule 83    expresion -> expresion OPERADOR_LOGICO expresion
Rule 84    expresion -> expresion SUMA expresion
Rule 85    expresion -> expresion RESTA expresion
Rule 86    expresion -> expresion MULTI expresion
Rule 87    expresion -> expresion DIVISION expresion
Rule 88    expresion -> expresion OR expresion
Rule 89    expresion -> expresion AND expresion
Rule 90    expresion -> - expresion
Rule 91    expresion -> expresion POST
Rule 92    expresion -> PRE expresion
Rule 93    vacio -> <empty>

Terminals, with rules where they appear

-                    : 90
AND                  : 89
ASIGNACION           : 76
BOOL                 : 70
BOOLEANO             : 65 81
COMA                 : 16 16 22 45 48 49 50 53 61
COMENTARIO           : 
CONSTANTE_ENTERA     : 20 46 48 60 73
CONSTANTE_FLOTANTE   : 21 49
CORCHETE_DER         : 59 60 73
CORCHETE_IZQ         : 59 60 73
DIVISION             : 87
DO                   : 24
ENTERO               : 68
FA                   : 27
FLAUTA               : 19
FLOTANTE             : 69
FUNCION              : 1
GUITARRA             : 18
ID                   : 36 47 50 60 72 73 79
LA                   : 29
LLAVE_DER            : 2 32 52
LLAVE_IZQ            : 2 32 52
MAIN                 : 1
MI                   : 26
MIENTRAS             : 14
MODIFICADOR          : 43
MULTI                : 86
NOTA                 : 71
OPERADOR_LOGICO      : 83
OR                   : 88
PARA                 : 15
PAREN_DER            : 1 12 13 14 15 31 44 78
PAREN_IZQ            : 1 12 13 14 15 31 44 78
PIANO                : 17
POST                 : 91
POTENCIA             : 42
PRE                  : 92
PUNTO_COMA           : 9 74 77
RE                   : 25
RESTA                : 85
SI                   : 12 13 30
SINO                 : 13
SOL                  : 28
SUMA                 : 84
TOCAR                : 44
dje                  : 
error                : 

Nonterminals, with rules where they appear

arreglo              : 67
asignacion           : 75 77
cuerpo               : 1 12 13 13 14 15
cuerpo_tocar         : 44
dec_asignacion       : 16 74
dec_variable         : 7
declaracion          : 10 11
declaracion_mientras : 5
declaracion_para     : 6
declaracion_si       : 4
elemento             : 37 41 43 58
elemento_arreglo     : 61 62
elemento_potencia    : 42
elemento_tocar       : 53 54 63
expresion            : 9 12 13 14 16 16 66 78 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92
funcion              : 0
indice_arreglo       : 82
instrumento          : 45
lista_arreglos       : 59 61
lista_declaraciones  : 2 10
lista_notas          : 22 31 32
lista_tocar          : 52 53
lista_variables      : 76
llaves_notas         : 34
modificacion_var     : 8
modificador_nota     : 38 40 57
nota                 : 22 23 35
numero               : 37 38 42 64 80
parametros_para      : 15
parametros_tocar     : 44
paren_notas          : 33
potencia_nota        : 56
sincronizacion       : 45
tempo                : 45
tiempo_nota          : 39 55
tipo_dato            : 75
tipo_var             : 76
tocar                : 3
vacio                : 51

Parsing method: LALR

state 0

    (0) S' -> . funcion
    (1) funcion -> . FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo

    FUNCION         shift and go to state 2

    funcion                        shift and go to state 1

state 1

    (0) S' -> funcion .



state 2

    (1) funcion -> FUNCION . MAIN PAREN_IZQ PAREN_DER cuerpo

    MAIN            shift and go to state 3


state 3

    (1) funcion -> FUNCION MAIN . PAREN_IZQ PAREN_DER cuerpo

    PAREN_IZQ       shift and go to state 4


state 4

    (1) funcion -> FUNCION MAIN PAREN_IZQ . PAREN_DER cuerpo

    PAREN_DER       shift and go to state 5


state 5

    (1) funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER . cuerpo
    (2) cuerpo -> . LLAVE_IZQ lista_declaraciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 7

    cuerpo                         shift and go to state 6

state 6

    (1) funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo .

    $end            reduce using rule 1 (funcion -> FUNCION MAIN PAREN_IZQ PAREN_DER cuerpo .)


state 7

    (2) cuerpo -> LLAVE_IZQ . lista_declaraciones LLAVE_DER
    (10) lista_declaraciones -> . lista_declaraciones declaracion
    (11) lista_declaraciones -> . declaracion
    (3) declaracion -> . tocar
    (4) declaracion -> . declaracion_si
    (5) declaracion -> . declaracion_mientras
    (6) declaracion -> . declaracion_para
    (7) declaracion -> . dec_variable
    (8) declaracion -> . modificacion_var
    (9) declaracion -> . expresion PUNTO_COMA
    (44) tocar -> . TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
    (12) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo
    (13) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
    (14) declaracion_mientras -> . MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
    (15) declaracion_para -> . PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
    (74) dec_variable -> . dec_asignacion PUNTO_COMA
    (77) modificacion_var -> . asignacion PUNTO_COMA
    (78) expresion -> . PAREN_IZQ expresion PAREN_DER
    (79) expresion -> . ID
    (80) expresion -> . numero
    (81) expresion -> . BOOLEANO
    (82) expresion -> . indice_arreglo
    (83) expresion -> . expresion OPERADOR_LOGICO expresion
    (84) expresion -> . expresion SUMA expresion
    (85) expresion -> . expresion RESTA expresion
    (86) expresion -> . expresion MULTI expresion
    (87) expresion -> . expresion DIVISION expresion
    (88) expresion -> . expresion OR expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . - expresion
    (91) expresion -> . expresion POST
    (92) expresion -> . PRE expresion
    (75) dec_asignacion -> . tipo_dato asignacion
    (76) asignacion -> . tipo_var ASIGNACION lista_variables
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
    (68) tipo_dato -> . ENTERO
    (69) tipo_dato -> . FLOTANTE
    (70) tipo_dato -> . BOOL
    (71) tipo_dato -> . NOTA
    (72) tipo_var -> . ID
    (73) tipo_var -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    TOCAR           shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    PARA            shift and go to state 21
    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 24
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33
    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    BOOL            shift and go to state 36
    NOTA            shift and go to state 37

    lista_declaraciones            shift and go to state 8
    declaracion                    shift and go to state 9
    tocar                          shift and go to state 10
    declaracion_si                 shift and go to state 11
    declaracion_mientras           shift and go to state 12
    declaracion_para               shift and go to state 13
    dec_variable                   shift and go to state 14
    modificacion_var               shift and go to state 15
    expresion                      shift and go to state 16
    dec_asignacion                 shift and go to state 22
    asignacion                     shift and go to state 23
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27
    tipo_dato                      shift and go to state 30
    tipo_var                       shift and go to state 31

state 8

    (2) cuerpo -> LLAVE_IZQ lista_declaraciones . LLAVE_DER
    (10) lista_declaraciones -> lista_declaraciones . declaracion
    (3) declaracion -> . tocar
    (4) declaracion -> . declaracion_si
    (5) declaracion -> . declaracion_mientras
    (6) declaracion -> . declaracion_para
    (7) declaracion -> . dec_variable
    (8) declaracion -> . modificacion_var
    (9) declaracion -> . expresion PUNTO_COMA
    (44) tocar -> . TOCAR PAREN_IZQ parametros_tocar PAREN_DER cuerpo_tocar
    (12) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo
    (13) declaracion_si -> . SI PAREN_IZQ expresion PAREN_DER cuerpo SINO cuerpo
    (14) declaracion_mientras -> . MIENTRAS PAREN_IZQ expresion PAREN_DER cuerpo
    (15) declaracion_para -> . PARA PAREN_IZQ parametros_para PAREN_DER cuerpo
    (74) dec_variable -> . dec_asignacion PUNTO_COMA
    (77) modificacion_var -> . asignacion PUNTO_COMA
    (78) expresion -> . PAREN_IZQ expresion PAREN_DER
    (79) expresion -> . ID
    (80) expresion -> . numero
    (81) expresion -> . BOOLEANO
    (82) expresion -> . indice_arreglo
    (83) expresion -> . expresion OPERADOR_LOGICO expresion
    (84) expresion -> . expresion SUMA expresion
    (85) expresion -> . expresion RESTA expresion
    (86) expresion -> . expresion MULTI expresion
    (87) expresion -> . expresion DIVISION expresion
    (88) expresion -> . expresion OR expresion
    (89) expresion -> . expresion AND expresion
    (90) expresion -> . - expresion
    (91) expresion -> . expresion POST
    (92) expresion -> . PRE expresion
    (75) dec_asignacion -> . tipo_dato asignacion
    (76) asignacion -> . tipo_var ASIGNACION lista_variables
    (20) numero -> . CONSTANTE_ENTERA
    (21) numero -> . CONSTANTE_FLOTANTE
    (60) indice_arreglo -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER
    (68) tipo_dato -> . ENTERO
    (69) tipo_dato -> . FLOTANTE
    (70) tipo_dato -> . BOOL
    (71) tipo_dato -> . NOTA
    (72) tipo_var -> . ID
    (73) tipo_var -> . ID CORCHETE_IZQ CONSTANTE_ENTERA CORCHETE_DER

    LLAVE_DER       shift and go to state 38
    TOCAR           shift and go to state 17
    SI              shift and go to state 19
    MIENTRAS        shift and go to state 20
    PARA            shift and go to state 21
    PAREN_IZQ       shift and go to state 18
    ID              shift and go to state 24
    BOOLEANO        shift and go to state 26
    -               shift and go to state 28
    PRE             shift and go to state 29
    CONSTANTE_ENTERA shift and go to state 32
    CONSTANTE_FLOTANTE shift and go to state 33
    ENTERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    BOOL            shift and go to state 36
    NOTA            shift and go to state 37

    declaracion                    shift and go to state 39
    tocar                          shift and go to state 10
    declaracion_si                 shift and go to state 11
    declaracion_mientras           shift and go to state 12
    declaracion_para               shift and go to state 13
    dec_variable                   shift and go to state 14
    modificacion_var               shift and go to state 15
    expresion                      shift and go to state 16
    dec_asignacion                 shift and go to state 22
    asignacion                     shift and go to state 23
    numero                         shift and go to state 25
    indice_arreglo                 shift and go to state 27
    tipo_dato                      shift and go to state 30
    tipo_var                       shift and go to state 31

state 9

    (11) lista_declaraciones -> declaracion .

    LLAVE_DER       reduce using rule 11 (lista_declaraciones -> declaracion .)
    TOCAR           reduce using rule 11 (lista_declaraciones -> declaracion .)
    SI              reduce using rule 11 (lista_declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 11 (lista_declaraciones -> declaracion .)
    PARA            reduce using rule 11 (lista_declaraciones -> declaracion .)
    PAREN_IZQ       reduce using rule 11 (lista_declaraciones -> declaracion .)
    ID              reduce using rule 11 (lista_declaraciones -> declaracion .)
    BOOLEANO        reduce using rule 11 (lista_declaraciones -> declaracion .)
    -               reduce using rule 11 (lista_declaraciones -> declaracion .)
    PRE             reduce using rule 11 (lista_declaraciones -> declaracion .)
    CONSTANTE_ENTERA reduce using rule 11 (lista_declaraciones -> declaracion .)
    CONSTANTE_FLOTANTE reduce using rule 11 (lista_declaraciones -> declaracion .)
    ENTERO          reduce using rule 11 (lista_declaraciones -> declaracion .)
    FLOTANTE        reduce using rule 11 (lista_declaraciones -> declaracion .)
    BOOL            reduce using rule 11 (lista_declaraciones -> declaracion .)
    NOTA            reduce using rule 11 (lista_declaraciones -> declaracion .)


state 10

    (3) declaracion -> tocar .

    LLAVE_DER       reduce using rule 3 (declaracion -> tocar .)
    TOCAR           reduce using rule 3 (declaracion -> tocar .)
    SI              reduce using rule 3 (declaracion -> tocar .)
    MIENTRAS        reduce using rule 3 (declaracion -> tocar .)
    PARA            reduce using rule 3 (declaracion -> tocar .)
    PAREN_IZQ       reduce using rule 3 (declaracion -> tocar .)
    ID              reduce using rule 3 (declaracion -> tocar .)
    BOOLEANO        reduce using rule 3 (declaracion -> tocar .)
    -               reduce using rule 3 (declaracion -> tocar .)
    PRE             reduce using rule 3 (declaracion -> tocar .)
    CONSTANTE_ENTERA reduce using rule 3 (declaracion -> tocar .)
    CONSTANTE_FLOTANTE reduce using rule 3 (declaracion -> tocar .)
    ENTERO          reduce using rule 3 (declaracion -> tocar .)
    FLOTANTE        reduce using rule 3 (declaracion -> tocar .)
    BOOL            reduce using rule 3 (declaracion -> tocar .)
    NOTA            reduce using rule 3 (declaracion -> tocar .)


state 11

    (4) declaracion -> declaracion_si .
